--- a/less/ui/ui.form.less
+++ b/less/ui/ui.form.less
@@ -213,11 +213,25 @@
 		padding-left: 40px;
 	}
 
+	// "REQUIRED INPUT" WARNING WONT SHOW UNLESS INPUT IS RENDERED
+	// THIS WILL MAKE IT 1X1PX DOT
 	input {
-		opacity: 0;
+		display: inline-block;
 		position: absolute;
-		width: 0;
-		height: 0;
+		top: 22px;
+		left: 7px;
+		width: 1px;
+		height: 1px;
+		border: 0 !important;
+		padding: 0;
+		margin: 0;
+		outline: none;
+		background-color: transparent !important;
+		opacity: 0.0001;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		-o-appearance:none;
+		appearance: none;
 	}
 
 	// SPAN MUST USED AT ALL TIME
