Form - fix for missing "label"

--- a/less/ui/ui.form.less
+++ b/less/ui/ui.form.less
@@ -8,6 +8,71 @@
 		padding: 7.5px 0;
 		margin: 0 -15px;
 
+		.label when (@lui_component_form_label = true){
+			display: block;
+			text-align: right;
+			padding: 7px 15px;
+			font-size: 14px;
+
+			&.required:after {
+				color: @color_delete;
+				content:" *";
+			}
+
+			.make.block-label {
+				text-align: left;
+				padding: 7px 0;
+			}
+
+			&.block {
+				.make.block-label();
+			}
+
+			// TODO MOBILE FIRST VERSION
+			// AFTER 1.0 RELEASE
+			@media (max-width:@grid_2k_end){
+				&.2k-block when (@grid_2k_enable = true){
+					.make.block-label();
+				}
+			}
+
+			@media (max-width:@grid_hd_end){
+				&.hd-block when (@grid_hd_enable = true){
+					.make.block-label();
+				}
+			}
+
+			@media (max-width:@grid_xl_end){
+				&.xl-block when (@grid_xl_enable = true){
+					.make.block-label();
+				}
+			}
+
+			@media (max-width:@grid_lg_end){
+				&.lg-block when (@grid_lg_enable = true) {
+					.make.block-label();
+				}
+			}
+
+			@media (max-width:@grid_md_end){
+				&.md-block when (@grid_md_enable = true){
+					.make.block-label();
+				}
+			}
+
+			@media (max-width:@grid_sm_end){
+				&.sm-block when (@grid_sm_enable = true){
+					.make.block-label();
+				}
+			}
+
+			@media (max-width:@grid_xs_end){
+				&.xs-block when (@grid_xs_enable = true){
+					.make.block-label();
+				}
+			}
+		}
+
 		div.info when (@lui_component_form_info = true){
 			padding: 11px 15px;
 			margin: -5px 0;
